<resources>
    <string name="app_name">sampleDashboardUIv1</string>
    <string name="hello">Hello</string>
    <string name="fulan">Fulan</string>
    <string name="search">Search...</string>
    <string name="target">Target</string>
    <string name="finance">Finance</string>
    <string name="health">Health</string>
    <string name="comfort">Comfort</string>
    <string name="trending">Trending</string>
    <string name="text_dummy">Lorem ipsum is simply dummy text of the pardice</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
</resources>